# rust-64-bit-os

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
